@@ -47,6 +47,18 @@ class OWP_Install_Demos {
 	}
 
 	/**
+	 * Image URL
+	 *
+	 * @since 1.0.0
+	 */
+	public function img_url( $demo ) {
+		$url = 'https://demos.oceanwp.org/0images/' . esc_attr( $demo ) . '.png';
+
+		// Return
+		return apply_filters( 'owp_demos_img_url', $url );
+	}
+
+	/**
 	 * Settings page output
 	 *
 	 * @since 1.0.0
@@ -97,9 +109,7 @@ class OWP_Install_Demos {
 							<div class="theme owp-open-popup" data-demo-id="<?php echo esc_attr( $demo ); ?>">
 
 								<div class="theme-screenshot">
-									<?php
-									$demo_img_src = OE_URL . 'includes/panel/demos/' . esc_attr( $demo ) . '.png'; ?>
-									<img src="<?php echo $demo_img_src; ?>" />
+									<img src="<?php echo $this->img_url( $demo ); ?>" />
 
 									<div class="demo-import-loader preview-all preview-all-<?php echo esc_attr( $demo ); ?>"></div>
 
